feat: add recipes api
