# routes/index.js
@@ -1,5 +1,6 @@
 import express from 'express';
-import contactsRouter from './contacts.js';
+import recipesRouter from './recipes.js';
+import ingredientsRouter from './ingredients.js';
 const router = express.Router();
 import swaggerRouter from './swagger.js';
 
@@ -9,6 +10,7 @@ router.get('/', (req, res) => {
   res.send('Hello world');
 });
 
-router.use('/contacts', contactsRouter);
+router.use('/recipes', recipesRouter);
+router.use('/ingredients', ingredientsRouter);
 
 export default router;
